...
          placeholder="Password"
          autoCapitalize="none"
        />
      </View>
      <View className="flex flex-col w-full">
        <Button disabled={loading} onPress={() => signInWithEmail()}>
          Log in
        </Button>
        <Button disabled={loading} onPress={() => signUpWithEmail()}>
          Sign up
        </Button>
      </View>
    </SafeAreaView>
...
